kinematics example, improving visualization defaults

--- a/bayesim/todo.txt
+++ b/bayesim/todo.txt
@@ -3,11 +3,11 @@ TO DO LIST FOR BAYESIM
 
 [* for necessary for paper, ~ for need to decide if it's necessary, - for future ideas]
 
-* add "prerequisites" or something section to docsgit
+* add "prerequisites" or something section to docs
 
 * add probability axis labels
 
-* maybe visualize model uncertainties somehow?
+* maybe visualize model uncertainties?
 
 * figure out rounding inconsistencies when attaching from file, like
 m = bym.Model(obs_data_path='obs_data.h5', output_var='J', ec_x_var='V', model_data_path='model_data.h5')
@@ -15,6 +15,8 @@ m.set_param_units('J', 'mA/cm^2')
 might be something about automatic tolerance setting?
 
 * either move true_vals star to x-axis or use a vertical line (and add legend for them)
+
+* add fcn to calculate weighted average values for each param
 
 * figure out the weird conda and numpy errors in Binder
 
