--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -29,7 +29,7 @@ urlcolor={blue!80!black}}
 \raggedbottom\usepackage[bottom]{footmisc} \makeatletter \def\p@section{} \def\p@subsubsection{} \makeatother\begin{document}
 \title{Bayesim: a tool for fast device characterization with Bayesian inference}
 \author{Rachel Kurchin}
-\affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
+\affiliation{Department of Materials Science \& Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Giuseppe Romano}
 \affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Tonio Buonassisi}
