--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -27,9 +27,9 @@ citecolor={blue},
 urlcolor={blue!80!black}}
 \lstset{basicstyle=\small\ttfamily,columns=flexible,breaklines=true}\newcommand{\fakesection}[1]{\par\refstepcounter{section}\sectionmark{#1}\addcontentsline{toc}{section}{\protect\numberline{\thesection}#1}}\def\equationautorefname~#1\null{#1\null}
 \raggedbottom\usepackage[bottom]{footmisc} \makeatletter \def\p@section{} \def\p@subsubsection{} \makeatother\begin{document}
-\title{Bayesim: a tool for fast device characterization with Bayesian inference}
+\title{\texttt{bayesim}: a tool for fast model fitting with Bayesian inference}
 \author{Rachel Kurchin}
-\affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
+\affiliation{Department of Materials Science \& Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Giuseppe Romano}
 \affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Tonio Buonassisi}
@@ -40,127 +40,86 @@ Target journal: Computer Physics Communications\end{abstract}
 \maketitle
 
 \fakesection{fake}
- 
+
 \section*{Introduction}
- There are a plethora of examples across diverse scientific and engineering fields of mathematical models used to simulate the results of experimental observations. In many cases, there are input parameters to these models which are difficult to determine via direct measurement, and it is desirable to invert the numerical model -- that is, use the experimental observations to determine values of the input parameters. Bayesian inference is a fruitful framework within which to do such fitting, since the resulting posterior probability distribution over the parameters of interest can give rich insights into not just the most likely values of the parameters, but also uncertainty about these values and the potentially complicated ways in which they can covary to give equally good fits to observations. We have previously demonstrated the value of a Bayesian approach in using automated high-throughput temperature- and illumination-dependent current-voltage measurements (JVTi) to fit material/interface properties and defect recombination parameters in photovoltaic (PV) absorbers~\cite{SnSJoule,FeBayes}. In cases such as these, when the data model is not a simple analytical equation but rather a computationally intensive numerical model, efficient, nonredundant sampling of the parameter space when computing likelihoods becomes critical to making the fit feasible. In this work, we introduce 	exttt{bayesim}, a Python-based code that utilizes adaptive grid sampling to perform Bayesian parameter estimation. We discuss the structure of the code, its implementation, and provide several examples of its usage. While the authors' expertise is in the realm of semiconductor physics and thus the examples herein are drawn from that space, we also discuss the general characteristics of a problem amenable to this approach so that researchers from other fields might adopt it as well. 
+  There are a plethora of examples across diverse scientific and engineering fields of mathematical models used to simulate the results of experimental observations. In many cases, there are input parameters to these models which are difficult to determine via direct measurement, and it is desirable to invert the numerical model -- that is, use the experimental observations to determine values of the input parameters. Bayesian inference is a fruitful framework within which to do such fitting, since the resulting posterior probability distribution over the parameters of interest can give rich insights into not just the most likely values of the parameters, but also uncertainty about these values and the potentially complicated ways in which they can covary to give equally good fits to observations.
+
+  We have previously demonstrated the value of a Bayesian approach in using automated high-throughput temperature- and illumination-dependent current-voltage measurements (JVTi) to fit material/interface properties and defect recombination parameters in photovoltaic (PV) absorbers~\cite{SnSJoule,FeBayes}. In cases such as these, when the data model is not a simple analytical equation but rather a computationally intensive numerical model, efficient, nonredundant sampling of the parameter space when computing likelihoods becomes critical to making the fit feasible.
+
+  In this work, we introduce \texttt{bayesim}, a Python-based code that utilizes adaptive grid sampling to perform Bayesian parameter estimation. We discuss the structure of the code, its implementation, and provide several examples of its usage. While the authors' expertise is in the realm of semiconductor physics and thus the examples herein are drawn from that space, we also discuss the general characteristics of a problem amenable to this approach so that researchers from other fields might adopt it as well.
+
 \section*{Model}
- \todo[inline]{Should this section titel actually just be ``Technical Background`` as well perhaps?} Bayes' Theorem states \begin{equation}
-\begin{split}\label{Eq:1001}
-P(H|E)=\frac{P(H)P(E|H)}{P(E)}
-\end{split}
-\end{equation}
-where $H$ is a \textit{hypothesis} and $E$ the observed \textit{evidence}. $P(H)$ is termed the \textit{prior}, $P(E|H)$ the \textit{likelihood}, $P(H|E)$ the \textit{posterior}, and $P(E)$ is a normalizing constant. If there are $n$ pieces of evidence, this can generalize to an iterative process where \begin{equation}
-\begin{split}\label{Eq:2}
-P(H|\{E_1,E_2,...E_n\}) = \frac{P(H|\{E_1,E_2...E_{n-1}\})P(E_n|H)}{P(E_n)}
-\end{split}
-\end{equation}
-In a multidimensional parameter estimation problem, each hypothesis $H$ is a tuple of possible values for the fitting parameters, i.e. a point in the parameter space. In \texttt{bayesim}, likelihoods are calculated for each point using a Gaussian where the argument is the difference between observed and simulated output and the standard deviation is the sum of experimental uncertainty and model uncertainty. The experimental uncertainty is a number provided by the user, while the model uncertainty is calculated by \texttt{bayesim} and reflects the sparseness of the parameter space grid, i.e. how much simulated output changes from one grid point to another. A high-level flowchart of what \texttt{bayesim} does is shown in ~(\autoref{fig_1})a.  
+  \todo[inline]{Should this section title actually just be ``Technical Background`` as well perhaps?}
+
+ Bayes' Theorem is a relationship between conditional probabilities. It states
+
+ \begin{equation}
+   \begin{split}
+     \label{Eq:1001}
+     P(H|E)=\frac{P(H)P(E|H)}{P(E)}
+   \end{split}
+ \end{equation}
+
+ where the notation $P(A|B)$ indicates the probability of $A$ being true given that $B$ is true. $H$ is a \textit{hypothesis} and $E$ the observed \textit{evidence}. $P(H)$ is termed the \textit{prior}, $P(E|H)$ the \textit{likelihood}, $P(H|E)$ the \textit{posterior}, and $P(E)$ is a normalizing constant. If there are $n$ pieces of evidence, this can generalize to an iterative process where
+
+ \begin{equation}
+   \begin{split}
+     \label{Eq:2}
+     P(H|\{E_1,E_2,...E_n\}) = \frac{P(H|\{E_1,E_2...E_{n-1}\})P(E_n|H)}{P(E_n)}
+   \end{split}
+ \end{equation}
+
+ In a multidimensional parameter estimation problem, each hypothesis $H$ is a tuple of possible values for the fitting parameters, i.e. a point in the parameter space, while the evidence $E$ is an observed output of a measurement as a function of various experimental conditions.
+
+ In order to compute a likelihood, a model capable of simulating that observed output as a function of both the fitting parameters and the experimental conditions is required. In \texttt{bayesim}, likelihoods are calculated for each point in parameter space using a Gaussian where the argument is the difference between observed and simulated output at that point, and the standard deviation is the sum of experimental uncertainty and model uncertainty. The experimental uncertainty is a number provided by the user that quantifies any noise/irreproducibility inherent to the measurement, while the model uncertainty is calculated by \texttt{bayesim} and reflects the sparseness of the parameter space grid, i.e. how much simulated output changes from one grid point to another.
+
+ \begin{figure}
+   {\includegraphics[width=0.7\columnwidth]{././figure_1.png}}
+   \caption{(Figure copied from docs website for now, will make a publication-appropriate version)}
+ \end{figure}
+
+ A high-level summary of what \texttt{bayesim} does is shown in Figure~\subref*{Fig:10}. Part a is a flowchart showing that observed (as a function of experimental conditions $\{C\}$ and simulated (as a function of fitting parameters $\{P\}$ and experimental conditions $\{C\}$) outputs are compared to produce a probability distribution over $\{P\}$. Part b schematically indicates the adaptive grid sampling approach for a hypothetical two-dimensional parameter space, wherein grid boxes exceeding some threshold probability are subdivided and lower-probability regions discarded, allowing attainment of a high fitting precision without needing to sample the entire parameter space at the same high density.
+
 \section*{Software Architecture and Interface}
- \subsection{Structure}
-  The structure of \texttt{bayeim} is shown in ~(\autoref{fig_2}). The top-level object with which users interact is implemented in the \texttt{Model} class. The \texttt{params} module defines classes to store information about the various types of parameters (fitting parameters, experimental conditions, and measured output) while the \texttt{Pmf} class stores the probability distribution and implements the manipulations required for Bayesian updates. \subsection{Interfaces}
-  describe ways to "talk to" \texttt{bayesim}. \subsection{Dependencies}
-  \todo[inline]{This probably makes sense to include also, right?} 
+  \subsection{Structure}
+    The structure of \texttt{bayeim} is shown in ~(\autoref{fig_2}). The top-level object with which users interact is implemented in the \texttt{Model} class. The \texttt{params} module defines classes to store information about the various types of parameters (fitting parameters, experimental conditions, and measured output) while the \texttt{Pmf} class stores the probability distribution and implements the manipulations required for Bayesian updates.
+
+  \subsection{Interfaces}
+    describe ways to ``talk to'' \texttt{bayesim}.
+
+  \subsection{Dependencies}
+    \todo[inline]{This probably makes sense to include also, right?}
+
 \section*{Application Examples}
- \subsection{Ideal Diode Model}
-  \begin{itemize}\item validation example - ``observed'' data is just generated using the model and we show we can recover the correct input parameters \item figure 3 showing PMF \end{itemize}  \subsection{Example with Real Data}
-  \begin{itemize}\item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper \item figure 4 showing PMF (animation in ESI) and comparison of JV curves \end{itemize}  \subsection{Maybe an example with a numerical model like PC1D}
+  \subsection{Ideal Diode Model}
+    \begin{itemize}
+      \item validation example - ``observed'' data is just generated using the model and we show we can recover the correct input parameters
+      \item figure 3 showing PMF
+    \end{itemize}
+
+  \subsection{Example with Real Data}
+    \begin{itemize}
+      \item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper
+      \item figure 4 showing PMF (animation in ESI) and comparison of JV curves
+    \end{itemize}
+
+  \subsection{Maybe an example with a numerical model like PC1D}
+
   \subsection{Maybe a non-PV example}
-  thermoelectrics? TIDLS? 
+    thermoelectrics? TIDLS?
+
 \section*{Conclusions}
- talk about broader applicability of approach 
+ talk about broader applicability of approach
+
 \section*{Acknowledgements}
- 
+
 \section*{Appendix}
- \begin{itemize}\item include minimal code to run ideal diode example \item link to Github repo (which has installation instructions and documentation as well as list of planned future features) \end{itemize} %merlin.mbs apsrev4-1.bst 2010-07-25 4.21a (PWD, AO, DPC) hacked
-%Control: key (0)
-%Control: author (8) initials jnrlst
-%Control: editor formatted (1) identically to author
-%Control: production of article title (-1) disabled
-%Control: page (0) single
-%Control: year (1) truncated
-%Control: production of eprint (0) enabled
-\begin{thebibliography}{2}%
-\makeatletter
-\providecommand \@ifxundefined [1]{%
- \@ifx{#1\undefined}
-}%
-\providecommand \@ifnum [1]{%
- \ifnum #1\expandafter \@firstoftwo
- \else \expandafter \@secondoftwo
- \fi
-}%
-\providecommand \@ifx [1]{%
- \ifx #1\expandafter \@firstoftwo
- \else \expandafter \@secondoftwo
- \fi
-}%
-\providecommand \natexlab [1]{#1}%
-\providecommand \enquote  [1]{``#1''}%
-\providecommand \bibnamefont  [1]{#1}%
-\providecommand \bibfnamefont [1]{#1}%
-\providecommand \citenamefont [1]{#1}%
-\providecommand \href@noop [0]{\@secondoftwo}%
-\providecommand \href [0]{\begingroup \@sanitize@url \@href}%
-\providecommand \@href[1]{\@@startlink{#1}\@@href}%
-\providecommand \@@href[1]{\endgroup#1\@@endlink}%
-\providecommand \@sanitize@url [0]{\catcode `\\12\catcode `\$12\catcode
-  `\&12\catcode `\#12\catcode `\^12\catcode `\_12\catcode `\%12\relax}%
-\providecommand \@@startlink[1]{}%
-\providecommand \@@endlink[0]{}%
-\providecommand \url  [0]{\begingroup\@sanitize@url \@url }%
-\providecommand \@url [1]{\endgroup\@href {#1}{\urlprefix }}%
-\providecommand \urlprefix  [0]{URL }%
-\providecommand \Eprint [0]{\href }%
-\providecommand \doibase [0]{http://dx.doi.org/}%
-\providecommand \selectlanguage [0]{\@gobble}%
-\providecommand \bibinfo  [0]{\@secondoftwo}%
-\providecommand \bibfield  [0]{\@secondoftwo}%
-\providecommand \translation [1]{[#1]}%
-\providecommand \BibitemOpen [0]{}%
-\providecommand \bibitemStop [0]{}%
-\providecommand \bibitemNoStop [0]{.\EOS\space}%
-\providecommand \EOS [0]{\spacefactor3000\relax}%
-\providecommand \BibitemShut  [1]{\csname bibitem#1\endcsname}%
-\let\auto@bib@innerbib\@empty
-%</preamble>
-\bibitem [{\citenamefont {Brandt}\ \emph {et~al.}(2017)\citenamefont {Brandt},
-  \citenamefont {Kurchin}, \citenamefont {Steinmann}, \citenamefont {Kitchaev},
-  \citenamefont {Roat}, \citenamefont {Levcenco}, \citenamefont {Ceder},
-  \citenamefont {Unold}, \citenamefont {Buonassisi},\ and\ \citenamefont
-  {Berlin}}]{SnSJoule}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {R.~E.}\ \bibnamefont
-  {Brandt}}, \bibinfo {author} {\bibfnamefont {R.~C.}\ \bibnamefont {Kurchin}},
-  \bibinfo {author} {\bibfnamefont {V.}~\bibnamefont {Steinmann}}, \bibinfo
-  {author} {\bibfnamefont {D.}~\bibnamefont {Kitchaev}}, \bibinfo {author}
-  {\bibfnamefont {C.}~\bibnamefont {Roat}}, \bibinfo {author} {\bibfnamefont
-  {S.}~\bibnamefont {Levcenco}}, \bibinfo {author} {\bibfnamefont
-  {G.}~\bibnamefont {Ceder}}, \bibinfo {author} {\bibfnamefont
-  {T.}~\bibnamefont {Unold}}, \bibinfo {author} {\bibfnamefont
-  {T.}~\bibnamefont {Buonassisi}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {H.~Z.}\ \bibnamefont {Berlin}},\ }\href {\doibase
-  10.1016/j.joule.2017.10.001} {\bibfield  {journal} {\bibinfo  {journal}
-  {Joule}\ }\textbf {\bibinfo {volume} {1}},\ \bibinfo {pages} {843} (\bibinfo
-  {year} {2017})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Kurchin}\ \emph {et~al.}(2018)\citenamefont
-  {Kurchin}, \citenamefont {Poindexter}, \citenamefont {Kitchaev},
-  \citenamefont {V\"ah\"anissi}, \citenamefont {del Ca\~nizo}, \citenamefont
-  {Zhe}, \citenamefont {Laine}, \citenamefont {Roat}, \citenamefont {Levcenco},
-  \citenamefont {Ceder},\ and\ \citenamefont {Buonassisi}}]{FeBayes}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {R.~C.}\ \bibnamefont
-  {Kurchin}}, \bibinfo {author} {\bibfnamefont {J.~R.}\ \bibnamefont
-  {Poindexter}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
-  {Kitchaev}}, \bibinfo {author} {\bibfnamefont {V.}~\bibnamefont
-  {V\"ah\"anissi}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {del
-  Ca\~nizo}}, \bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Zhe}},
-  \bibinfo {author} {\bibfnamefont {H.~S.}\ \bibnamefont {Laine}}, \bibinfo
-  {author} {\bibfnamefont {C.}~\bibnamefont {Roat}}, \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Levcenco}}, \bibinfo {author}
-  {\bibfnamefont {G.}~\bibnamefont {Ceder}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {T.}~\bibnamefont {Buonassisi}},\ }\href@noop {} {\enquote
-  {\bibinfo {title} {Semiconductor parameter extraction via current-voltage
-  characterization and bayesian inference methods},}\ } (\bibinfo {year}
-  {2018})\BibitemShut {NoStop}%
-\end{thebibliography}%
+ \begin{itemize}
+   \item include minimal code to run ideal diode example
+   \item link to Github repo (which has installation instructions and documentation as well as list of planned future features)
+  \end{itemize}
+
+\bibliography{biblio}
+\bibliographystyle{ieeetr}
+
 \end{document}
