first couple sections done

--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -21,3 +21,60 @@ author={Kurchin, Rachel C. and Poindexter, Jeremy R. and Kitchaev, Daniil and V\
 organization={IEEE},
 month={6},
 )
+
+@book{numpy,
+  title = {A guide to NumPy},
+  author = {Travis E. Oliphant},
+  year = {2006},
+  publisher = {Trelgol Publishing}
+}
+
+@Misc{scipy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+}
+
+@Misc{joblib,
+  howpublished = {\url{https://joblib.readthedocs.io/en/latest/}},
+  title = {Joblib},
+  author = {Joblib developers}
+}
+
+@proceeding(pandas,
+  title={Data Structures for Statistical Computing in Python},
+  booktitle={Proceedings of the 9th Python in Science Conference},
+  year={2010},
+  author={Wes McKinney},
+  pages={51--56}
+)
+
+@Misc{deepdish,
+  author={Gustav Larsson and Mark Stoehr},
+  title={deepdish},
+  howpublished={\url{https://github.com/uchicago-cs/deepdish}}
+  }
+
+@Article{mpl,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@Misc{docs,
+  author = {Rachel C. Kurchin and Giuseppe Romano},
+  title={bayesim},
+  year = {2018},
+  howpublished={\url{https://pv-lab.github.io/bayesim/_build/html/index.html}}
+}
