--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -17,7 +17,6 @@
 \usepackage{url}
 \def\UrlBreaks{\do\/\do-}
 \newcommand {\framedgraphic}[2] {\begin{frame}{#1}\begin{center}\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{#2}\end{center}\end{frame}}\usepackage[breaklinks]{hyperref}
-\usepackage{breakurl}
 \usepackage{tabularx}
 \usepackage{soul}
 \hypersetup{
@@ -35,11 +34,12 @@ urlcolor={blue!80!black}}
 \author{Tonio Buonassisi}
 \email{buonassi@mit.edu}
 \affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
-\begin{abstract}
-Target journal: Computer Physics Communications\end{abstract}
-\maketitle
 
-\fakesection{fake}
+\begin{abstract}
+Target journal: Computer Physics Communications
+\end{abstract}
+
+\maketitle
 
 \section*{Introduction}
   There are a plethora of examples across diverse scientific and engineering fields of mathematical models used to simulate the results of experimental observations. In many cases, there are input parameters to these models which are difficult to determine via direct measurement, and it is desirable to invert the numerical model -- that is, use the experimental observations to determine values of the input parameters. Bayesian inference is a fruitful framework within which to do such fitting, since the resulting posterior probability distribution over the parameters of interest can give rich insights into not just the most likely values of the parameters, but also uncertainty about these values and the potentially complicated ways in which they can covary to give equally good fits to observations.
@@ -74,21 +74,32 @@ Target journal: Computer Physics Communications\end{abstract}
  In order to compute a likelihood, a model capable of simulating that observed output as a function of both the fitting parameters and the experimental conditions is required. In \texttt{bayesim}, likelihoods are calculated for each point in parameter space using a Gaussian where the argument is the difference between observed and simulated output at that point, and the standard deviation is the sum of experimental uncertainty and model uncertainty. The experimental uncertainty is a number provided by the user that quantifies any noise/irreproducibility inherent to the measurement, while the model uncertainty is calculated by \texttt{bayesim} and reflects the sparseness of the parameter space grid, i.e. how much simulated output changes from one grid point to another.
 
  \begin{figure}
-   {\includegraphics[width=0.7\columnwidth]{././figure_1.png}}
+   \includegraphics[width=0.7\columnwidth]{figure_1.png}
    \caption{(Figure copied from docs website for now, will make a publication-appropriate version)}
+   \label{fig1}
  \end{figure}
 
- A high-level summary of what \texttt{bayesim} does is shown in Figure~\subref*{Fig:10}. Part a is a flowchart showing that observed (as a function of experimental conditions $\{C\}$ and simulated (as a function of fitting parameters $\{P\}$ and experimental conditions $\{C\}$) outputs are compared to produce a probability distribution over $\{P\}$. Part b schematically indicates the adaptive grid sampling approach for a hypothetical two-dimensional parameter space, wherein grid boxes exceeding some threshold probability are subdivided and lower-probability regions discarded, allowing attainment of a high fitting precision without needing to sample the entire parameter space at the same high density.
+ A high-level summary of what \texttt{bayesim} does is shown in ~\autoref{fig1}. Part (a) is a flowchart showing that observed (as a function of experimental conditions $\{C\}$ and simulated (as a function of fitting parameters $\{P\}$ and experimental conditions $\{C\}$) outputs are compared to produce a probability distribution over $\{P\}$. Part (b) schematically indicates the adaptive grid sampling approach for a hypothetical two-dimensional parameter space, wherein grid boxes exceeding some threshold probability are subdivided and lower-probability regions discarded, allowing attainment of a high fitting precision without needing to sample the entire parameter space at the same high density.
 
 \section*{Software Architecture and Interface}
+
+  \begin{figure}
+    \includegraphics[width=0.7\columnwidth]{structure.png}
+    \caption{\texttt{bayesim} software structure, indicating class definitions, internal and external dependencies, and interfaces.}
+    \label{structure}
+  \end{figure}
+
+  The structure of \texttt{bayeim} is shown in ~\autoref{structure}. Detailed and up-to-date documentation of classes, functions, and example applications is maintained online.~\cite{docs}
+
   \subsection{Structure}
-    The structure of \texttt{bayeim} is shown in ~(\autoref{fig_2}). The top-level object with which users interact is implemented in the \texttt{Model} class. The \texttt{params} module defines classes to store information about the various types of parameters (fitting parameters, experimental conditions, and measured output) while the \texttt{Pmf} class stores the probability distribution and implements the manipulations required for Bayesian updates.
+
+    The top-level object with which users interact is implemented in the \texttt{Model} class. The \texttt{params} module defines classes to store information about the various types of parameters (fitting parameters, experimental conditions, and measured output) while the \texttt{Pmf} class stores the probability distribution and implements the manipulations required for Bayesian updates.
 
   \subsection{Interfaces}
-    describe ways to ``talk to'' \texttt{bayesim}.
+    The most flexible way to interact with \texttt{bayesim} is via Python scripting or through literate programming in a Jupyter notebook. There is also a command line interface (CLI) for users less familiar with coding in Python.
 
   \subsection{Dependencies}
-    \todo[inline]{This probably makes sense to include also, right?}
+    \texttt{bayesim} relies on a variety of external open-source packages. These include \texttt{numpy}~\cite{numpy} and \texttt{scipy}~\cite{scipy} for a variety of mathematical functions and vectorized implementations, \texttt{joblib}~\cite{joblib} for simple parallelism, \texttt{deepdish}~\cite{deepdish} for saving and loading HDF5 files, \texttt{pandas}~\cite{pandas} for data manipulation, and \texttt{matplotlib}~\cite{mpl} for visualization.
 
 \section*{Application Examples}
   \subsection{Ideal Diode Model}
@@ -97,16 +108,12 @@ Target journal: Computer Physics Communications\end{abstract}
       \item figure 3 showing PMF
     \end{itemize}
 
-  \subsection{Example with Real Data}
+  \subsection{SnS Solar Cell}
     \begin{itemize}
-      \item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper
-      \item figure 4 showing PMF (animation in ESI) and comparison of JV curves
+      \item more practical example - replicating fit from Joule paper
+      \item figure 4 showing PMF and comparison of JV curves
     \end{itemize}
 
-  \subsection{Maybe an example with a numerical model like PC1D}
-
-  \subsection{Maybe a non-PV example}
-    thermoelectrics? TIDLS?
 
 \section*{Conclusions}
  talk about broader applicability of approach
