--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -32,7 +32,7 @@ month={6},
 @Misc{scipy,
   author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
   title =     {{SciPy}: Open source scientific tools for {Python}},
-  year =      {2001--},
+  year =      {2001},
   url = "http://www.scipy.org/",
 }
 
